Corretto i percorsi delle risorse per GitHub Pages

--- a/sito/index.html
+++ b/sito/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#servizi"><i class="fas fa-concierge-bell"></i> Servizi</a></li>
                 <li><a href="#galleria"><i class="fas fa-images"></i> Galleria</a></li>
                 <li><a href="#prenotazioni"><i class="fas fa-calendar-alt"></i> Prenotazioni</a></li>
-                <li><a href="dashboard.html"><i class="fas fa-user-cog"></i> Dashboard</a></li>
+                <li><a href="/sito-sabrina/dashboard.html"><i class="fas fa-user-cog"></i> Dashboard</a></li>
             </ul>
         </nav>
     </header>
@@ -32,9 +32,9 @@
         <h2>Galleria</h2>
         <p>Foto dei nostri lavori.</p>
         <div class="galleria-container">
-            <img src="images/gallery1.jpg" alt="Galleria 1">
-            <img src="images/gallery2.jpg" alt="Galleria 2">
-            <img src="images/gallery3.jpg" alt="Galleria 3">
+            <img src="/sito-sabrina/images/gallery1.jpg" alt="Galleria 1">
+            <img src="/sito-sabrina/images/gallery2.jpg" alt="Galleria 2">
+            <img src="/sito-sabrina/images/gallery3.jpg" alt="Galleria 3">
         </div>
     </section>
 
