--- a/sito/index.html
+++ b/sito/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Onicotecnica Sabrina</title>
+    <!-- Percorsi aggiornati per GitHub Pages -->
     <link rel="stylesheet" href="/sito-sabrina/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -32,6 +33,7 @@
         <h2>Galleria</h2>
         <p>Foto dei nostri lavori.</p>
         <div class="galleria-container">
+            <!-- Percorsi aggiornati per le immagini -->
             <img src="/sito-sabrina/images/gallery1.jpg" alt="Galleria 1">
             <img src="/sito-sabrina/images/gallery2.jpg" alt="Galleria 2">
             <img src="/sito-sabrina/images/gallery3.jpg" alt="Galleria 3">
