--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Onicotecnica Sabrina</title>
-    <!-- Percorsi aggiornati per la nuova posizione -->
+    <!-- Percorsi aggiornati -->
     <link rel="stylesheet" href="./sito/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -43,7 +43,19 @@
     <section id="prenotazioni" class="section">
         <h2><i class="fas fa-calendar-check"></i> Prenota un trattamento</h2>
         <form id="booking-form" class="booking-form">
-            <!-- ...existing code... -->
+            <label for="name">Nome:</label>
+            <input type="text" id="name" name="name" required>
+            <label for="phone">Telefono:</label>
+            <input type="tel" id="phone" name="phone" required>
+            <label for="date">Data:</label>
+            <select id="date" name="date" required></select>
+            <label for="time">Orario:</label>
+            <select id="time" name="time" required>
+                <option value="" disabled selected>Seleziona una data prima</option>
+            </select>
+            <label for="notes">Note:</label>
+            <textarea id="notes" name="notes" rows="3" placeholder="Scrivi eventuali richieste o note..."></textarea>
+            <button type="submit"><i class="fas fa-check-circle"></i> Prenota</button>
         </form>
         <p id="booking-message"></p>
     </section>
@@ -52,34 +64,6 @@
         <p>&copy; 2023 Sabrina Onicotecnica. Tutti i diritti riservati.</p>
     </footer>
 
-    <script type="module">
-        import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
-
-        const supabaseUrl = 'https://cikjhhbwxobypgofavuj.supabase.co';
-        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNpa2poaGJ3eG9ieXBnb2ZhdnVqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQwNTQ2MjYsImV4cCI6MjA1OTYzMDYyNn0.t1tegLTbzqX75EUdo1BboKgudq6SggYkshOM-6d2oEo';
-        const supabaseClient = createClient(supabaseUrl, supabaseKey);
-
-        // ...existing code...
-    </script>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            try {
-                // Recupera l'URL dello sfondo da localStorage
-                const backgroundImageURL = localStorage.getItem('backgroundImageURL');
-
-                if (backgroundImageURL) {
-                    // Applica l'immagine di sfondo dinamicamente
-                    document.body.style.backgroundImage = `url('${backgroundImageURL}')`;
-                    document.body.style.backgroundSize = 'cover';
-                    document.body.style.backgroundPosition = 'center';
-                } else {
-                    console.warn('Nessun URL dello sfondo trovato in localStorage.');
-                }
-            } catch (error) {
-                console.error('Errore nel caricamento dello sfondo:', error);
-            }
-        });
-    </script>
+    <script src="./sito/js/script.js"></script>
 </body>
 </html>
