--- a/sito/dashboard.html
+++ b/sito/dashboard.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Sabrina Onicotecnica</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/dashboard.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
+    <!-- Percorsi aggiornati -->
+    <link rel="stylesheet" href="./css/dashboard.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -614,5 +613,6 @@
     <footer class="dashboard-footer">
         <p>&copy; 2023 Sabrina Onicotecnica. Tutti i diritti riservati.</p>
     </footer>
+    <script src="./js/dashboard.js"></script>
 </body>
 </html>
