Corretto form, sfondo e percorsi per GitHub Pages

--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
         <p>&copy; 2023 Sabrina Onicotecnica. Tutti i diritti riservati.</p>
     </footer>
 
-    <script src="./sito/js/script.js"></script>
+    <script type="module" src="./sito/js/script.js"></script>
 </body>
 </html>
