Corretto percorsi e funzionalità per Supabase

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Onicotecnica Sabrina</title>
     <!-- Percorsi aggiornati -->
-    <link rel="stylesheet" href="./sito/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -17,7 +17,7 @@
                 <li><a href="#servizi"><i class="fas fa-concierge-bell"></i> Servizi</a></li>
                 <li><a href="#galleria"><i class="fas fa-images"></i> Galleria</a></li>
                 <li><a href="#prenotazioni"><i class="fas fa-calendar-alt"></i> Prenotazioni</a></li>
-                <li><a href="./sito/dashboard.html"><i class="fas fa-user-cog"></i> Dashboard</a></li>
+                <li><a href="./dashboard.html"><i class="fas fa-user-cog"></i> Dashboard</a></li>
             </ul>
         </nav>
     </header>
@@ -34,9 +34,9 @@
         <p>Foto dei nostri lavori.</p>
         <div class="galleria-container">
             <!-- Percorsi aggiornati per le immagini -->
-            <img src="./sito/images/gallery1.jpg" alt="Galleria 1">
-            <img src="./sito/images/gallery2.jpg" alt="Galleria 2">
-            <img src="./sito/images/gallery3.jpg" alt="Galleria 3">
+            <img src="./images/gallery1.jpg" alt="Galleria 1">
+            <img src="./images/gallery2.jpg" alt="Galleria 2">
+            <img src="./images/gallery3.jpg" alt="Galleria 3">
         </div>
     </section>
 
@@ -64,7 +64,7 @@
         <p>&copy; 2023 Sabrina Onicotecnica. Tutti i diritti riservati.</p>
     </footer>
 
-    <script type="module" src="./sito/js/script.js"></script>
+    <script type="module" src="./js/script.js"></script>
     <script type="module">
         // Funzione per caricare le date disponibili
         const loadDates = async () => {
