Rimosso file duplicato e aggiornati i percorsi

--- a/sito/index.html
+++ b/sito/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Onicotecnica Sabrina</title>
-    <!-- Percorsi aggiornati per GitHub Pages -->
-    <link rel="stylesheet" href="/sito-sabrina/css/style.css">
+    <!-- Percorsi aggiornati -->
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -17,7 +17,7 @@
                 <li><a href="#servizi"><i class="fas fa-concierge-bell"></i> Servizi</a></li>
                 <li><a href="#galleria"><i class="fas fa-images"></i> Galleria</a></li>
                 <li><a href="#prenotazioni"><i class="fas fa-calendar-alt"></i> Prenotazioni</a></li>
-                <li><a href="/sito-sabrina/dashboard.html"><i class="fas fa-user-cog"></i> Dashboard</a></li>
+                <li><a href="./dashboard.html"><i class="fas fa-user-cog"></i> Dashboard</a></li>
             </ul>
         </nav>
     </header>
@@ -33,10 +33,9 @@
         <h2>Galleria</h2>
         <p>Foto dei nostri lavori.</p>
         <div class="galleria-container">
-            <!-- Percorsi aggiornati per le immagini -->
-            <img src="/sito-sabrina/images/gallery1.jpg" alt="Galleria 1">
-            <img src="/sito-sabrina/images/gallery2.jpg" alt="Galleria 2">
-            <img src="/sito-sabrina/images/gallery3.jpg" alt="Galleria 3">
+            <img src="./images/gallery1.jpg" alt="Galleria 1">
+            <img src="./images/gallery2.jpg" alt="Galleria 2">
+            <img src="./images/gallery3.jpg" alt="Galleria 3">
         </div>
     </section>
 
